[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aarons_website"
version = "1.0.0"
requires-python = ">=3.8.1,<4"
dependencies = [
    "Flask>=3.0.2,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "flake8>=7,<8",
]

[tool.setuptools.package-data]
"*" = ["**/static/**/*", "**/templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
